--- a/index.html
+++ b/index.html
@@ -97,6 +97,99 @@
       </div>
     </nav>
 
+    <!-- slider -->
+
+    <div id="slider" class="carousel slide">
+      <!-- indicaters -->
+
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#slider"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#slider"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#slider"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+
+      <!-- carousel inner -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="image/fruits-white-background (1).jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>100 % Organic</h5>
+            <p>
+              "Our vegetables and fruits are fresh, chemical-free and
+              high-quality,handpicked from our own farm..<br />
+              They are safe, naturally grown, and full of essential nutrients —
+              as fresh as if just harvested."
+            </p>
+          </div>
+        </div>
+
+        <!-- previous btn -->
+        <div class="carousel-item">
+          <img src="image/delivery-woman.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Fast & Reliable Door-to-Door Delivery</h5>
+            <p>Fresh from our farm to your home.</p>
+          </div>
+        </div>
+
+        <!-- next btn -->
+        <div class="carousel-item">
+          <img
+            src="image/Eco-Friendly Packaging.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Eco-Friendly Packaging</h5>
+            <p>
+              Packed with care in recyclable, sustainable materials — good
+              <br />
+              for you and good for the Earth
+            </p>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#slider"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#slider"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
