--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
 
     <!-- slider -->
 
-    <div id="slider" class="carousel slide">
+    <div
+      id="carouselExampleAutoplaying"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
       <!-- indicaters -->
 
       <div class="carousel-indicators">
@@ -128,11 +132,7 @@
       <!-- carousel inner -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img
-            src="image/fruits-white-background (1).jpg"
-            class="d-block w-100"
-            alt="..."
-          />
+          <img src="image/fruits.jpg" class="d-block w-100" alt="..." />
           <div class="carousel-caption d-none d-md-block">
             <h5>100 % Organic</h5>
             <p>
@@ -156,7 +156,7 @@
         <!-- next btn -->
         <div class="carousel-item">
           <img
-            src="image/Eco-Friendly Packaging.jpg"
+            src="image/eco-friendly-disposable.jpg"
             class="d-block w-100"
             alt="..."
           />
